@@ -34,6 +34,7 @@
 ///   <li>@ref JSModuleConsoleInfo "console.info"</li>
 ///   <li>@ref JSModuleConsoleLog "console.log"</li>
 ///   <li>@ref JSModuleConsoleWarn "console.warn"</li>
+///   <li>@ref JSModuleConsoleGetline "console.getline"</li>
 /// </ol>
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -65,6 +66,10 @@
 ///
 /// @anchor JSModuleConsoleWarn
 /// @copydetails JSF_console_warn
+/// <hr>
+///
+/// @anchor JSModuleConsoleGetline
+/// @copydetails JS_Getline
 ////////////////////////////////////////////////////////////////////////////////
 
 // Local Variables:
