@@ -72,9 +72,9 @@ namespace triagens {
       MODE_CONSOLE,
       MODE_UNITTESTS,
       MODE_JSLINT,
+      MODE_SCRIPT
     }
     server_operation_mode_e;
-
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief ArangoDB server
@@ -408,7 +408,7 @@ namespace triagens {
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief unit tests
 ///
-/// @CMDOPT{--unit-tests @CA{test-file}}
+/// @CMDOPT{--javascript.unit-tests @CA{test-file}}
 ///
 /// Runs one or more unit tests.
 ////////////////////////////////////////////////////////////////////////////////
@@ -424,6 +424,26 @@ namespace triagens {
 ////////////////////////////////////////////////////////////////////////////////
 
         vector<string> _jslint;
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief run script file
+///
+/// @CMDOPT{--javascript.script @CA{script-file}}
+///
+/// Runs the script file.
+////////////////////////////////////////////////////////////////////////////////
+
+        vector<string> _scriptFile;
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief parameters to script file
+///
+/// @CMDOPT{--javascript.script-parameter @CA{script-parameter}}
+///
+/// Parameter to script.
+////////////////////////////////////////////////////////////////////////////////
+
+        vector<string> _scriptParameters;
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief vocbase
