@@ -144,6 +144,12 @@ namespace triagens {
           // do noting
         }
 
+        ////////////////////////////////////////////////////////////////////////////////
+        /// @brief handles authentication
+        ////////////////////////////////////////////////////////////////////////////////
+
+        bool handleAuthentication ();
+
       protected:
 
         ////////////////////////////////////////////////////////////////////////////////
